# CG-18

./: CMakeLists.txt  README.md
Parte1/: CMakeLists.txt
Parte1/gerador/: gerador.cpp
Parte1/motor/: motor.h
Parte2/: CMakeLists.txt  sistema.xml
Parte2/gerador/: gerador.cpp  gerador.h
Parte2/motor/: Escala.cpp  Rotacao.cpp  Transformacao.cpp  Transformacao.h  Transforms.cpp  Translacao.cpp  motor.cpp  motor.h  sistema.xml  tinyxml2.cpp  tinyxml2.h
Parte2/motor/headers/: Cor.h  Escala.h  Rotacao.h  Transformacao.h  Transforms.h  Translacao.h  motor.h
Parte3/: CMakeLists.txt  sistema.xml
Parte3/gerador/: bezier.3d  bezier.txt  gerador.cpp  gerador.h
Parte3/headers/: Rotacao.h  Transforms.h
Parte3/motor/: Camara.cpp  Cor.cpp  Escala.cpp  Ponto.cpp  Rotacao.cpp  Transformacao.cpp  Transforms.cpp  Translacao.cpp  motor.cpp
Parte3/motor/headers/: Camara.h  Escala.h  Ponto.h  Rotacao.h  Transformacao.h  Transforms.h  Translacao.h  motor.h  tinyxml2.h
Parte4/: CMakeLists.txt  sistema.xml
Parte4/gerador/: gerador.cpp  gerador.h
Parte4/motor/: Cor.cpp  Transformacao.cpp  Transforms.cpp  Translacao.cpp  motor.cpp
Parte4/motor/headers/: Camara.h  Cor.h  Transformacao.h  Transforms.h  Translacao.h
gerador/: gerador.cpp
motor/: box.3d  box.xml  cone.3d  cone.xml  cylinder.3d  cylinder.xml  motor.cpp  motor.h  plane.xml  sphere.3d  sphere.xml  teapot.xml
